Fixing alignment issue

--- a/project_style.css
+++ b/project_style.css
@@ -232,7 +232,7 @@
 		position: absolute;
 		z-index: 10;
 		bottom: 103;
-		right:345;
+		right:386;
 		height:119px;
 		width: 210px;
 	}
